Bug #20180
closedInconsistent evaluation of `**{}` depending on position in array
Description
Reproduced on ruby:3.3 docker container
The evaluation of **{} differs if it appears alone (evaluates as empty / no content) in an array vs after another element (evaluates as an empty Hash).
args = []; kwargs = {}
[*args]
# => []
[**kwargs]
# => []
[*args, **kwargs]
# => [{}]
[*args] + [**kwargs] == [*args, **kwargs]
=> false
I claim this violates the Principle of Least Surprise. I will admit that beyond a thin example I will give below, I am struggling to come up with a more convincing pragmatic reason that this should be addressed, but due to how surprising it is and the bugs it cause our team I wanted to submit it for tracking. This may be related to https://bugs.ruby-lang.org/issues/20064?tab=notes though the issues are distinct.
Specifically, in my use case, I am writing a class responsible for adapting arguments in one form to another (json object to method args and vice versa). My tests broken when adding support for keyword args due to expectations of no args:
Again, this is a bit thin as by itself this isn't problematic as I can add the {}. However, this does require that my test knows more about the implementation that it should. That is, my implementation might be
This change does not change the behavior of the class, but will break the test. I therefore think this behavior of **kwargs is problematic.
Updated by jeremyevans0 (Jeremy Evans) over 2 years ago
I submitted a pull request to fix this: https://github.com/ruby/ruby/pull/9624
Updated by byroot (Jean Boussier) over 2 years ago
- Backport changed from 3.0: UNKNOWN, 3.1: UNKNOWN, 3.2: UNKNOWN, 3.3: UNKNOWN to 3.0: REQUIRED, 3.1: REQUIRED, 3.2: REQUIRED, 3.3: REQUIRED
Seems like this behavior changed in 2.7.
Updated by jeremyevans0 (Jeremy Evans) over 2 years ago
- Related to Bug #20229: Empty keyword splat in array not removed in ARGSPUSH case added
Updated by jeremyevans0 (Jeremy Evans) over 2 years ago
- Status changed from Open to Closed
Fixed by 77c1233f79a0f96a081b70da533fbbde4f3037fa. However, that adds an instruction, so the implementation is not backportable. To backport, use the change in https://github.com/ruby/ruby/pull/9624
Updated by k0kubun (Takashi Kokubun) over 2 years ago
- Status changed from Closed to Open
As per #note-4, I tried to backport https://github.com/ruby/ruby/commit/e199f5fe07f350434cc843bf52caa20f1b1ca755 (part of https://github.com/ruby/ruby/pull/9624), but it also conflicts. Could you file a backport PR to ruby_3_3?
Updated by k0kubun (Takashi Kokubun) over 2 years ago
- Status changed from Open to Closed
Updated by peterzhu2118 (Peter Zhu) about 2 years ago
I opened a PR to backport this patch to Ruby 3.3: https://github.com/ruby/ruby/pull/10959
Updated by k0kubun (Takashi Kokubun) about 2 years ago
- Backport changed from 3.0: REQUIRED, 3.1: REQUIRED, 3.2: REQUIRED, 3.3: REQUIRED to 3.0: REQUIRED, 3.1: REQUIRED, 3.2: REQUIRED, 3.3: DONE
ruby_3_3 40251ed0dfe99bb09c2fa542fce603ade25e3729.
Updated by nagachika (Tomoyuki Chikanaga) about 2 years ago
- Backport changed from 3.0: REQUIRED, 3.1: REQUIRED, 3.2: REQUIRED, 3.3: DONE to 3.0: REQUIRED, 3.1: REQUIRED, 3.2: DONE, 3.3: DONE
ruby_3_2 b494ecfbc1b2a934d27233b7171c40adaa81e3c5.