Remove empty keyword splat in array after positional splat

Previously, this wasn't removed, because the newarraykwsplat
instruction was not used.  This does result in an additional
array allocation for keyword splats in arrays.

Fixes [Bug #20180]